Fix mobile layout issues

--- a/frontend/src/assets/css/car-list.css
+++ b/frontend/src/assets/css/car-list.css
@@ -34,7 +34,7 @@ section.car-list article .btn-book {
     color: #333;
     font-size: 12px;
     margin: 0 5px 10px 5px;
-    min-height: 750px;
+    min-height: 800px;
     padding: 15px;
     max-width: 480px;
   }
